k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testappnode
spec:
  selector:
    app: testappnode
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
