k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testappnode-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: testapp.103.117.150.187.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testappnode
            port:
              number: 80
